# cam_lidar_calib

./: .gitignore  CMakeLists.txt  package.xml
config/: image_view.rviz  image_view_multicam.rviz  tier4_c1.yaml  tier4_c1_120_calibrated_param_1920x1280.yaml  tier4_c1_72_calibrated_param_1920x1280.yaml  tier4_c1_85_calibrated_param_1920x1280.yaml  tier4_c1_calibrated_param_1920x1280.yaml  view_result.rviz  view_result_multicam.rviz
launch/: calibration.launch  debug.launch  ew_demo.launch  sensor_fusion.launch  tier4-c1_ouster-os1_calib.launch  tier4-c1_ouster-os1_projetion.launch  tier4-c1_ouster-os1_projetion_debug.launch  tier4_multiple_camera.launch  tier4_single_camera.launch
msg/: ImageDepth.msg
result/EW2023/: calibated_result.txt  calibated_result_port_0.txt  calibated_result_port_1.txt  calibrated_result_crash_port_0.txt  calibrated_result_crash_port_1.txt  calibrated_result_port_0.txt  calibrated_result_port_1.txt  calibrated_result_port_3.txt  calibrated_result_port_5.txt  calibrated_result_port_7.txt  init_file.txt  init_file_port_0.txt  init_file_port_1.txt  init_file_port_3.txt  init_file_port_5.txt  init_file_port_7.txt  rpy_txyz_calibated_result_port_0.txt  rpy_txyz_calibated_result_port_1.txt  rpy_txyz_calibrated_result_crash_port_0.txt  rpy_txyz_calibrated_result_crash_port_1.txt  rpy_txyz_calibrated_result_debug.txt  rpy_txyz_calibrated_result_port_0.txt  rpy_txyz_calibrated_result_port_1.txt  rpy_txyz_calibrated_result_port_3.txt  rpy_txyz_calibrated_result_port_5.txt  rpy_txyz_calibrated_result_port_7.txt
src/: cam_lidar_calib_node.cpp  cam_lidar_proj_node.cpp
